fix image title and about text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -132,10 +132,10 @@ footer {
         width: 75%;
     }
     .images-title {
+        text-align: center;
+    }
+    .about-text {
         text-align: justify;
         text-justify: inter-word;
-    }
-    .body-layout {
-        display: block;
     }
 }
